--- a/client-pokebattle/src/index.css
+++ b/client-pokebattle/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Nunito';
+  src: url("./assets/fonts/Nunito-Regular.ttf");
+}
+
 input:focus-within ~ label,
 input:not(:placeholder-shown) ~ label {
   @apply transform scale-75 -translate-y-5;
